--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
             src="./assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com/in/kabo-masilo-b8143332a/'">LinkedIn</a></p>
+          /
+          onclick="location.href='https://www.linkedin.com/in/kabo-masilo-b8143332a/'"
         </div>
       </div>
     </section>
